apps/downloader/sonarr/k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  # The config volume is ReadWriteOnce; a rolling update would let a second
  # pod attach it and write the same database.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      nodeSelector:
        node-role/workload: zfs
      containers:
      - name: sonarr
        image: linuxserver/sonarr:4.0.20
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
        ports:
          - containerPort: 8989
            name: http
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /config
          - name: video
            mountPath: /vol_raidz1/video
          - name: music
            mountPath: /vol_raidz1/music
          - name: photo
            mountPath: /vol_raidz1/photo
          - name: downloads
            mountPath: /vol_raidz1/downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: longhorn-pvc-sonarr-config
        - name: video
          hostPath:
            path: /vol_raidz1/video
            type: Directory
        - name: music
          hostPath:
            path: /vol_raidz1/music
            type: Directory
        - name: photo
          hostPath:
            path: /vol_raidz1/photo
            type: Directory
        - name: downloads
          hostPath:
            path: /vol_raidz1/downloads
            type: Directory
