apps/downloader/sonarr/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sonarr
