apps/downloader/sonarr/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sonarr
    namespace: downloader
    annotations:
        argocd.argoproj.io/sync-wave: "30"
        traefik.ingress.kubernetes.io/router.entrypoints: web239,websecure239
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:PrpDksX95757RxvoWBm1eVjbUYE2UtRDsGFMfg==,iv:1iTCv5OBzi0LKtXjYOQLsKteUSky8udDghvlBoK6n1A=,tag:5janTzNEsWBVoJ2gN7RinQ==,type:str]
          secretName: wildcard-cloudflare-production-02
    rules:
        - host: ENC[AES256_GCM,data:zi+DcKNP4y0C24I0wpzn2VTcMxhyMxqu9xj6ag==,iv:VWGiUXFZe3iQnTNdGXvr+S+B9FCsL+L85n8cIh/llvk=,tag:ra9cSKtQyYvo2pJJ/tEuGQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: sonarr
                        port:
                            number: 8989
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSFhrTld3bTZUWW80c05W
[...]
            zStzOF502zq4du5xDq0Xh782k/KNIDUdOAIdQqTJ9UQkuy2ihFryfw==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhQWNBYU53UlRiZFNhcFNI
[...]
            CAgH5R+5Bv+IGTD46dxE7jpgj29MCTCTduiN2BD1ewoT4OzghT4OSg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-06T22:17:23Z"
    mac: ENC[AES256_GCM,data:LAzi/ye1NaawAdpCF8ZmkZyQsJ4vwmPqSkfb/7TGU1WgmwJ42xO8hTut9cfMDqglS0E8uNNsw15CTwxSykD87Fg7WYGEVgnQ04Z54HbIkh+KCMXdxlcCNc71O1J634WVH6rYde65J6BG7+V/5HHhySnEB5CPMOvvHVVPDPNIQfM=,iv:WoicNjzEvAPRRVSLcPewDGJKwhbrpcQMaA88H1wd6j4=,tag:Ek8lN6dOLPrAjCkhlHz3JA==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.11.0
